fix an issue: empty gap appears in categories page

--- a/source/css/style.styl
+++ b/source/css/style.styl
@@ -2,6 +2,7 @@
 @import "_partial/profile_card.styl";
 @import "_utils/card_style.styl";
 @import "_utils/button_style.styl";
+@import "_utils/timeline_widget.styl";
 @import "_partial/post_list.styl";
 @import "_partial/footer.styl";
 @import "_partial/category_table.styl";
@@ -45,6 +46,8 @@ h5
 p, span, h5, h6
     font-size: 16px;
 
+ul 
+    margin-bottom: 0;
 
 #content
     background-image: content-linear-bg;
